--- a/Templates/HW_Report.sty
+++ b/Templates/HW_Report.sty
@@ -1,29 +1,21 @@
 \usepackage[UTF8]{ctex}     % support chinese
 
-\usepackage{fancyhdr}       % header
+% \usepackage{fancyhdr}       % header
 \usepackage{enumitem}       % enum
-\usepackage{listings}       % code sytle
+% \usepackage{listings}       % code sytle
 \usepackage{xcolor}         %
 \usepackage{amsmath}        % math
-% \usepackage{fullpage}       % full page
+% the full page is confict with header
+% \usepackage{fullpage}     % full page
 \usepackage{graphicx}       % graph
+\usepackage{booktabs}       % tabs in table
+\usepackage{tabularx}       % table
 
-% header style
-\setlength{\headheight}{12.0pt} 
-\fancyhf{}
-\fancyhead[L]{\textbf{Name:} LNfromNorth \textbf{ID:} 123456}
-\fancyhead[C]{\textbf{Class}}
-\fancyhead[R]{\textbf{Homework Num:} x}
+% append
+\usepackage{circuitikz}     % circuit
+\usepackage{algorithm, algorithmicx}    % algo
+
+
 
 % code style
-\lstset{
-    language=Python,
-    basicstyle=\ttfamily\scriptsize,
-    numbers=left,
-    numberstyle=\scriptsize\color{gray},
-    keywordstyle=\color{blue},
-    commentstyle=\color{green},
-    stringstyle=\color{red},
-    frame=single,
-    breaklines=true
-}
+% \usepackage{}
